--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "@app/frontend",
-  "version": "0.0.1",
+  "name": "@app/dashboard",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "formik": "^2.2.9",
     "ky": "^0.30.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-modal": "^3.15.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
@@ -16,7 +17,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-modal": "^3.13.1",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
